--- a/css/hover.css
+++ b/css/hover.css
@@ -236,6 +236,7 @@
 
 /* Bounce Out */
 .hvr-bounce-out {
+    background-color: yellow
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
